kubernetes-deploy/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: luccacb16/backend:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: sqlite-data
          mountPath: /app/db
      volumes:
      - name: sqlite-data
        persistentVolumeClaim:
          claimName: sqlite-pvc
